<resources>
    <string name="app_name">Pay Calculator</string>
    <string name="about">About</string>
    <string name="hamburger">hamburger</string>
    <string name="please_fill_out_details">Please fill out details</string>
    <string name="number_of_hours_worked">Number of hours worked</string>
    <string name="pay_rate">Hourly Rate</string>
    <string name="calculate">Calculate</string>
    <string name="total_pay">TOTAL PAY</string>
    <string name="total_tax">TOTAL TAX</string>
    <string name="reset">RESET</string>
    <string name="student_details">STUDENT DETAILS</string>
    <string name="name">Name</string>
    <string name="carter_comeau">Carter Comeau</string>
    <string name="student_id">Student ID</string>
    <string name="_101253879">101253879</string>
</resources>